feat: migrationまわりを追加

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "db:reset": "prisma db push --accept-data-loss --schema=./prisma/reset.prisma && npm run migrate",
+    "migrate": "prisma migrate dev",
+    "db:seed": "prisma db seed"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +19,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.0.2"
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
