--- a/package.json
+++ b/package.json
@@ -5,20 +5,27 @@
   "main": "index.js",
   "scripts": {
     "db:reset": "prisma db push --accept-data-loss --schema=./prisma/reset.prisma && npm run migrate",
-    "migrate": "prisma migrate dev",
+    "db:migrate": "prisma migrate dev",
     "db:seed": "prisma db seed"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.9.1",
     "prisma": "^3.0.2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@prisma/client": "^3.0.2"
+    "@graphql-tools/schema": "^8.2.0",
+    "@prisma/client": "^3.0.2",
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.3",
+    "graphql-scalars": "^1.10.1"
+  },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   }
