--- a/frontend/codegen.yml
+++ b/frontend/codegen.yml
@@ -1,8 +1,9 @@
 overwrite: true
 schema: "http://localhost:4000/graphql"
-# documents: "src/**/*.graphql"
+documents: "src/**/*.graphql"
 generates:
   src/graphql/generated.ts:
     plugins:
       - "typescript"
       - "typescript-operations"
+      - "typescript-graphql-request"
